--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="container">
+    <div class="row">
+      <div class="application-container col-md-8 offset-md-2">
+          <app-root></app-root>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
