embed font in the backend

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Alf.io, the open source ticket reservation system</title>
+  <link rel="stylesheet" href="/resources/css/source-sans-pro.css">
 </head>
 <body>
   <div class="container">
