--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <div class="row">
-      <div class="application-container col-md-10 offset-md-1">
-          <app-root></app-root>
-      </div>
+    <div class="application-container p-md-4">
+        <app-root></app-root>
     </div>
   </div>
 </body>
