--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,8 @@
   <title>Alf.io, the open source ticket reservation system</title>
 </head>
 <body>
-  <div class="container">
-    <div class="application-container p-md-4">
-        <app-root></app-root>
-    </div>
+  <div class="container-fluid">
+    <app-root></app-root>
   </div>
 </body>
 </html>
