--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Alf.io, the open source ticket reservation system</title>
 </head>
 <body>
-  <div class="container-fluid">
+  <div>
     <app-root></app-root>
   </div>
 </body>
