--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="notranslate" translate="no">
 <head>
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google" content="notranslate" />
   <title>Alf.io, the open source ticket reservation system</title>
 </head>
 <body>
